--- a/styles.css
+++ b/styles.css
@@ -328,12 +328,11 @@
   font-size: 0;
   width: 30px;
   height: 64px;
-  background-color: rgba(0, 0, 0, 0.0);
 }
 
 .slick-prev-popular,
 .slick-prev-latest {
-  background: url('./images/arrow_black_left.png') no-repeat;
+  background: url('images/arrow_black_left.png') no-repeat;
   background-position: center;
   background-size: cover;
   border: none;
@@ -342,7 +341,7 @@
 
 .slick-next-popular,
 .slick-next-latest {
-  background: url('./images/arrow_black_right.png') no-repeat;
+  background: url('images/arrow_black_right.png') no-repeat;
   background-position: center;
   background-size: cover;
   border: none;
