--- a/styles.css
+++ b/styles.css
@@ -91,10 +91,6 @@
   transition: 180ms;
 }
 
-/* .header .nav-link:hover:after {
-  width: 100%;
-} */
-
 .pricing-header .navbar-nav li:nth-child(2) a {
   color: var(--main-color) !important;
 }
@@ -165,27 +161,6 @@
   padding-bottom: 98px;
 }
 
-/* @media screen and (max-width: 767px) {
-  .pro1,
-  .pro2 {
-    padding-bottom: 58px;
-  }
-}
-
-@media screen and (max-width: 575px) {
-  .hero h1 {
-    font-size: 61px;
-  }
-
-  .pricing-header .navbar-nav li:nth-child(2) a:after {
-    width: 0%;
-  }
-
-  .courses-header .navbar-nav li:nth-child(1) a:after {
-    width: 0%;
-  }
-} */
-
 /* Quotes Section  */
 
 .quotes {
@@ -234,12 +209,6 @@
 .quotes .carousel-control-next.arrow-right {
   padding-left: var(--quotes-arrows-pad);
 }
-
-/* @media screen and (max-width: 767px) {
-  .quotes .carousel-item img {
-    margin-left: 85px;
-  }
-} */
 
 .loader {
   border: 10px solid #f3f3f3;
@@ -324,7 +293,7 @@
   top: 35%;
   z-index: 10;
   color: #333;
-  transform: translateY(-60%);  /* Adjusted value */
+  transform: translateY(-60%);
   font-size: 0;
   width: 30px;
   height: 64px;
@@ -336,7 +305,7 @@
   background-position: center;
   background-size: cover;
   border: none;
-  left: -30px;  /* Adjusted value */
+  left: -30px;
 }
 
 .slick-next-popular,
@@ -345,7 +314,7 @@
   background-position: center;
   background-size: cover;
   border: none;
-  right: -30px;  /* Adjusted value */
+  right: -30px;
 }
 
 /* SMILES Section  */
@@ -416,35 +385,6 @@
   padding-bottom: 39px;
 }
 
-/* @media screen and (max-width: 991px) {
-  .footer {
-    padding-left: 40px;
-    padding-right: 40px;
-  }
-}
-
-@media screen and (max-width: 576px) {
-  .footer {
-    height: auto;
-  }
-  .footer .row {
-    height: auto;
-  }
-  .footer .trademark {
-    padding-bottom: 0;
-  }
-  .footer .row {
-    padding-top: 50px;
-    padding-bottom: 34px;
-  }
-  .footer .social.nav {
-    padding: 0px;
-  }
-  .footer .social {
-    padding: 45px 0;
-  }
-} */
-
 /* ==============================================================
 ==============================================================
 ============================================================== */
@@ -476,18 +416,6 @@
 .pricing-header .title-fig {
   width: 200px;
 }
-
-/* @media screen and (max-width: 575px) {
-  .pricing-header h1 {
-    font-size: 24px;
-  }
-  .pricing-header .hero .smile-fig {
-    max-width: 30px;
-  }
-  .pricing-header .title-fig {
-    width: 150px;
-  }
-} */
 
 /* PRICING GRID  */
 
@@ -539,37 +467,6 @@
   vertical-align: middle;
 }
 
-/* @media screen and (min-width: 576px) {
-  .prices-grid .table .prices-col-3 {
-    padding-left: 30px;
-  }
-}
-
-@media screen and (max-width: 575px) {
-  .prices-grid .row {
-    margin-bottom: 51px;
-  }
-
-  .prices-grid .table {
-    table-layout: initial;
-  }
-  .prices-grid .pricing-table-title-1,
-  .prices-grid .pricing-table-title-2 {
-    font-size: 12px;
-    padding: 0;
-    padding-bottom: 30px;
-  }
-  .prices-grid .prices-col-1 {
-    padding-right: 30px;
-  }
-  .prices-grid .prices-col-2 {
-    padding-right: 50px;
-  }
-  .prices-grid .pricing-table-title-1 {
-    padding-right: 36px;
-  }
-} */
-
 /* FAQ SECTION  */
 
 .faq .section-header h2 {
@@ -610,32 +507,6 @@
   padding-right: var(--faq-pad-outer);
 }
 
-/* @media screen and (min-width: 768px) and (max-width: 991px) {
-  :root {
-    --faq-pad-inner: 3vw;
-    --faq-pad-outer: 9vw;
-  }
-}
-
-@media screen and (max-width: 575px) {
-  .faq .section-body .col1,
-  .faq .section-body .col2 {
-    padding: 0 4vw;
-  }
-
-  .faq .section-body .row1 {
-    padding-bottom: 146px;
-  }
-
-  .faq .section-body .col2 {
-    padding-top: 146px;
-  }
-
-  .faq .section-body {
-    margin-bottom: 108px;
-  }
-} */
-
 /* ==============================================================
 ==============================================================
 ============================================================== */
@@ -662,14 +533,6 @@
   margin-top: 37px;
   padding-bottom: 51px;
 }
-
-/* @media screen and (max-width: 1000px) {
-  .courses-header {
-    background-position-y: 0;
-    background-size: initial;
-    background-position-y: -100px;
-  }
-} */
 
 /* SEARCH SECTION  */
 
@@ -765,17 +628,6 @@
   background-color: white;
 }
 
-/* @media screen and (max-width: 575px) {
-  .search .box1 .input-group {
-    margin-bottom: 0;
-  }
-
-  .search .box2 {
-    margin-top: 19px;
-    margin-bottom: 19px;
-  }
-} */
-
 /* RESULTS SECTION  */
 .results .section-title {
   font-size: 16px;
@@ -792,27 +644,3 @@
   padding-top: 18px;
   padding-bottom: 18px;
 }
-
-/* @media screen and (min-width: 576px) and (max-width: 767px) {
-  .results .card-img-overlay {
-    top: 1vh;
-  }
-  .results .rating img {
-    width: 12px;
-  }
-
-  .results .rating + span {
-    display: block;
-    padding-top: 30px;
-  }
-}
-
-@media screen and (max-width: 575px) {
-  .results .card-img-overlay {
-    top: 5vh;
-  }
-
-  .results .card {
-    width: 90vw;
-  }
-} */
